@@ -1,5 +1,13 @@
 2007-02-04 Braden McDaniel  <braden@endoframe.com>
 
+	Factored GladeXML creation out of main.
+
+	* src/openvrml-player/player.cpp
+	(main(int, char *[])): Factored GladeXML creation out of main.
+	(xml_new(GnomeProgram &)): Moved GladeXML creation to here.
+
+2007-02-04 Braden McDaniel  <braden@endoframe.com>
+
 	Use pkg-config to check for FreeType.
 
 	* configure.ac: Use pkg-config to check for FreeType; add
